# FeedYourMind

./: body_header.py  body_main.py  body_of_html_page.py  btc_price_test.py  english_fundamental_rule1.py  google.txt  index.html  main.py  mon_fichier.txt  pandas_playground.py  pyproject.toml  scrape_probability_table.py  world_pop.py
generate_html/: body_main.py  body_nav.py  body_of_html_page.py  create_html_skeleton.py  head_of_html_page.py  html_maker.py
generate_tex/: alpha.tex  fundamental_rule_1.tex
modules_examples/: module1.py  module2.py  module3.py
scraping/: google_search.py  spacy_playground.py
track_crypto/: get_crypto_prices.py
us_cities/: us_cities.py
